# issue-dependency-graph

./: .gitignore  Dockerfile  Makefile  README.md  __init__.py  action.yml  entrypoint.sh  idg  pyproject.toml  setup.py
.github/workflows/: main.yaml
issue_dep_graph/: idg.py  utils.py
