[tool.poetry]
name = "issue_dep_graph"
version = "0.2.0"
description = ""
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
readme = "README.md"
packages = [{include = "issue_dep_graph"}]

[tool.poetry.dependencies]
python = "^3.9"
pygithub = "^1.59.0"
beartype = "^0.15.0"
arguably = "^1.2.5"
poetry2setup = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"
debugpy = "1.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true